# PO1

lab1/: CMakeLists.txt
lab1/include/: MyList.h  MyNode.h
lab1/src/: MyList.cpp  MyNode.cpp
lab10/: CMakeLists.txt
lab10/include/: Product.h  Sum.h  Table.h
lab10/src/: Product.cpp  Sum.cpp  Table.cpp
lab11/: CMakeLists.txt
lab11/include/: Variable.h
lab11/src/: Variable.cpp
lab12/: CMakeLists.txt  main.cpp
lab12/include/: PairOfNumbers.h  RangeArray.h
lab12/src/: RangeArray.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: MathV.h
lab2/src/: MathV.cpp
lab3/: CMakeLists.txt
lab3/include/: ReverseText.h
lab3/src/: ReverseText.cpp
lab4/: CMakeLists.txt
lab4/include/: Funkcje.h  ZlozenieFunkcji.h
lab4/src/: Funkcje.cpp  ZlozenieFunkcji.cpp
lab5/: CMakeLists.txt
lab5/include/: FSContainer.h  FlatShape.h  Triangle.h  Vertex.h
lab5/src/: FSContainer.cpp  FlatShape.cpp  Triangle.cpp  Vertex.cpp
lab6/: CMakeLists.txt
lab6/include/: Primitive.h  Product.h  Ratio.h  Sum.h
lab6/src/: Primitive.cpp  Product.cpp  Ratio.cpp  Sum.cpp
lab7/: CMakeLists.txt
lab7/include/: Dir.h  File.h  System.h
lab7/src/: Dir.cpp  File.cpp  System.cpp
lab8/: CMakeLists.txt
lab8/include/: GameObj.h
lab8/src/: GameObj.cpp
lab9/: CMakeLists.txt
lab9/include/: FlatPoint.h
lab9/src/: FlatPoint.cpp
